# ClaudeCodeCoach

./: .env.example  .gitignore  CHANGELOG.md  README.md  architecture.md  build_app.sh  main.py  platform_utils.py  pyproject.toml  requirements.txt  seed_knowledge.py  start.sh  status.md  test_learn_more.py  theme.py  version.json  version.py
.claude/: CLAUDE.md  KNOWN_ISSUES.md  NEXT_SESSION.md  settings.json
.claude/agents/: code-reviewer.md
.claude/commands/: commit.md  init.md  status.md
.claude/skills/: testing.md
.github/workflows/: lint.yml  test.yml
assets/: coach_schema.sql
data/knowledge/: claude-md-basics.md  claude-md-best-practices.md  code-style-guide.md  context-efficiency.md  file-conventions.md  gitignore-setup.md  managing-large-files.md  migration-guides.md  model-selection.md  project-setup-guide.md  providing-examples.md  skill-antipatterns.md  skill-best-practices.md  skill-context-patterns.md  skills-vs-claude-md.md  task-breakdown-strategies.md  test-guidance.md  writing-clear-instructions.md  xml-tags-guide.md
data/knowledge/advanced-patterns/: automated-docs.md  git-worktrees.md  hooks-patterns.md  message-queue.md  meta-skill-pattern.md  parallel-subagents.md  screenshot-debugging.md  voice-planning.md
data/knowledge/best-practices/: code-review-agents.md  commit-workflow.md  documentation-patterns.md  incremental-sprints.md  testing-with-claude.md  twenty-eighty-rule.md
data/knowledge/configuration/: cli-config.md  config-menu.md  environment-variables.md  settings-files.md  theme-settings.md
data/knowledge/context-efficiency/: context-hygiene.md  context-window-basics.md  mcp-context-warning.md  progressive-disclosure.md  reducing-bloat.md
data/knowledge/feature-selection/: composition-hierarchy.md  feature-decision-guide.md  progressive-path.md  skills-vs-commands.md  when-use-mcp.md  when-use-subagents.md
data/knowledge/models/: change-model.md  extended-thinking.md  haiku-usage.md  opus-usage.md  sonnet-usage.md
data/knowledge/permission-modes/: auto-mode.md  permission-config.md  plan-mode.md  toggle-modes.md
data/knowledge/project-setup/: agents-overview.md  claude-md-guide.md  (+6 more)
health_checks/: __init__.py  base.py
health_checks/critical/: __init__.py  bloated_claude_md.py  mcp_overload.py  no_gitignore.py  secrets_exposed.py
health_checks/info/: __init__.py  missing_env_example.py  no_commit_command.py  no_github_actions.py  no_init_command.py  no_worktrees.py
health_checks/warning/: __init__.py  invalid_hook_keys.py  large_files.py  model_not_set.py  no_agents_dir.py  no_architecture_md.py  no_changelog_md.py  no_commands_dir.py  no_hooks.py  no_planning_docs.py  no_readme.py  no_skills_dir.py  no_status_md.py  no_tests_dir.py  thinking_not_enabled.py
pages/: fix_page.py  health_scan.py  knowledge_page.py  settings.py  setup_wizard.py
pages/components/: __init__.py  filter_controls.py  fix_card.py  issue_card.py  scan_results.py
services/: app_state.py  config_manager.py  database.py  database_history.py  health_checker.py  knowledge_seeder.py  knowledge_service.py  logging_config.py  platform_utils.py  project_scanner.py  project_setup_service.py  status_updater.py  tech_stack_analyzer.py  version.py
tests/: __init__.py  conftest.py  test_health_checker.py
theme/: __init__.py  components.py  constants.py
utils/: __init__.py  platform_specific.py  report_formatter.py
(+19 files in other folders)
